--- a/analysis-complete-case/analysis-other-exploratory-moderators.Rmd
+++ b/analysis-complete-case/analysis-other-exploratory-moderators.Rmd
@@ -979,7 +979,7 @@ summary(fit1, show_control_fit = TRUE)
 
 ```{r}
 Lmat <- matrix(c(1,0,
-                 1,1), nrow = 2)
+                 1,1), nrow = 2, byrow = TRUE)
 
 fit <- fit1
 
@@ -1033,6 +1033,64 @@ dat_result_exp_output <- dat_result_exp
 dat_result_exp_output[,2:ncol(dat_result_exp_output)] <- format(round(dat_result_exp_output[,2:ncol(dat_result_exp_output)], 3), nsmall = 3)
 
 dat_result_exp_output %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "other-exploratory-moderators", "risk_ratio_scale_cig_available.csv"), row.names = TRUE)
+```
+
+```{r}
+png(file = file.path("analysis-complete-case", "formatted-output", "other-exploratory-moderators", "risk_ratio_scale_cig_available_CI95.png"), width = 7, height = 7, units = "in", res = 600)
+
+dat_plot <- dat_result_exp[3:4,]
+dat_plot$variable <- c("Cigarettes were not available", "Cigarettes were available")
+
+plot("n", xlim = c(0,4), ylim = c(0.75,1.75), xlab = "", xaxt = "n", yaxt = "n", ylab = "Treatment Effect on the Risk Ratio Scale")
+axis(1, at = c(1,3), labels = dat_plot$variable)
+axis(2, at = seq(0.75,1.75,0.25))
+
+use_x0 <- 1
+use_y0 <- dat_plot$rrLB95[1]
+use_y1 <- dat_plot$rrUB95[1]
+points(use_x0, dat_plot$exp_estimates[1], col = "forestgreen", lwd = 30)
+arrows(x0 = use_x0, y0 = use_y0, x1 = use_x0, y1 = use_y1, code = 3, col = "forestgreen", lwd = 10, angle = 90)
+text(x = use_x0 + 0.5, y = dat_plot$exp_estimates[1], labels = round(dat_plot$exp_estimates[1], 3), col = "forestgreen", cex = 2)
+
+use_x0 <- 3
+use_y0 <- dat_plot$rrLB95[2]
+use_y1 <- dat_plot$rrUB95[2]
+points(use_x0, dat_plot$exp_estimates[2], col = "darkgoldenrod", lwd = 30)
+arrows(x0 = use_x0, y0 = use_y0, x1 = use_x0, y1 = use_y1, code = 3, col = "darkgoldenrod", lwd = 10, angle = 90)
+text(x = use_x0 + 0.5, y = dat_plot$exp_estimates[2], labels = round(dat_plot$exp_estimates[2], 3), col = "darkgoldenrod", cex = 2)
+
+abline(h = 1, lty = 3, col = "red", lwd = 2)
+
+dev.off()
+```
+
+```{r}
+png(file = file.path("analysis-complete-case", "formatted-output", "other-exploratory-moderators", "risk_ratio_scale_cig_available_CI90.png"), width = 7, height = 7, units = "in", res = 600)
+
+dat_plot <- dat_result_exp[3:4,]
+dat_plot$variable <- c("Cigarettes were not available", "Cigarettes were available")
+
+plot("n", xlim = c(0,4), ylim = c(0.75,1.75), xlab = "", xaxt = "n", yaxt = "n", ylab = "Treatment Effect on the Risk Ratio Scale")
+axis(1, at = c(1,3), labels = dat_plot$variable)
+axis(2, at = seq(0.75,1.75,0.25))
+
+use_x0 <- 1
+use_y0 <- dat_plot$rrLB90[1]
+use_y1 <- dat_plot$rrUB90[1]
+points(use_x0, dat_plot$exp_estimates[1], col = "forestgreen", lwd = 30)
+arrows(x0 = use_x0, y0 = use_y0, x1 = use_x0, y1 = use_y1, code = 3, col = "forestgreen", lwd = 10, angle = 90)
+text(x = use_x0 + 0.5, y = dat_plot$exp_estimates[1], labels = round(dat_plot$exp_estimates[1], 3), col = "forestgreen", cex = 2)
+
+use_x0 <- 3
+use_y0 <- dat_plot$rrLB90[2]
+use_y1 <- dat_plot$rrUB90[2]
+points(use_x0, dat_plot$exp_estimates[2], col = "darkgoldenrod", lwd = 30)
+arrows(x0 = use_x0, y0 = use_y0, x1 = use_x0, y1 = use_y1, code = 3, col = "darkgoldenrod", lwd = 10, angle = 90)
+text(x = use_x0 + 0.5, y = dat_plot$exp_estimates[2], labels = round(dat_plot$exp_estimates[2], 3), col = "darkgoldenrod", cex = 2)
+
+abline(h = 1, lty = 3, col = "red", lwd = 2)
+
+dev.off()
 ```
 
 # Negative affect self-reported in brief survey
@@ -1143,7 +1201,7 @@ summary(fit1, show_control_fit = TRUE)
 
 ```{r}
 Lmat <- matrix(c(1,0,
-                 1,1), nrow = 2)
+                 1,1), nrow = 2, byrow = TRUE)
 
 fit <- fit1
 
@@ -1197,6 +1255,64 @@ dat_result_exp_output <- dat_result_exp
 dat_result_exp_output[,2:ncol(dat_result_exp_output)] <- format(round(dat_result_exp_output[,2:ncol(dat_result_exp_output)], 3), nsmall = 3)
 
 dat_result_exp_output %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "other-exploratory-moderators", "risk_ratio_scale_negative_affect.csv"), row.names = TRUE)
+```
+
+```{r}
+png(file = file.path("analysis-complete-case", "formatted-output", "other-exploratory-moderators", "risk_ratio_scale_negative_affect_CI95.png"), width = 7, height = 7, units = "in", res = 600)
+
+dat_plot <- dat_result_exp[3:4,]
+dat_plot$variable <- c("Negative emotions\nwere not present", "Negative emotions\nwere present")
+
+plot("n", xlim = c(0,4), ylim = c(0.75,1.75), xlab = "", xaxt = "n", yaxt = "n", ylab = "Treatment Effect on the Risk Ratio Scale")
+axis(1, at = c(1,3), labels = dat_plot$variable)
+axis(2, at = seq(0.75,1.75,0.25))
+
+use_x0 <- 1
+use_y0 <- dat_plot$rrLB95[1]
+use_y1 <- dat_plot$rrUB95[1]
+points(use_x0, dat_plot$exp_estimates[1], col = "forestgreen", lwd = 30)
+arrows(x0 = use_x0, y0 = use_y0, x1 = use_x0, y1 = use_y1, code = 3, col = "forestgreen", lwd = 10, angle = 90)
+text(x = use_x0 + 0.5, y = dat_plot$exp_estimates[1], labels = round(dat_plot$exp_estimates[1], 3), col = "forestgreen", cex = 2)
+
+use_x0 <- 3
+use_y0 <- dat_plot$rrLB95[2]
+use_y1 <- dat_plot$rrUB95[2]
+points(use_x0, dat_plot$exp_estimates[2], col = "darkgoldenrod", lwd = 30)
+arrows(x0 = use_x0, y0 = use_y0, x1 = use_x0, y1 = use_y1, code = 3, col = "darkgoldenrod", lwd = 10, angle = 90)
+text(x = use_x0 + 0.5, y = dat_plot$exp_estimates[2], labels = round(dat_plot$exp_estimates[2], 3), col = "darkgoldenrod", cex = 2)
+
+abline(h = 1, lty = 3, col = "red", lwd = 2)
+
+dev.off()
+```
+
+```{r}
+png(file = file.path("analysis-complete-case", "formatted-output", "other-exploratory-moderators", "risk_ratio_scale_negative_affect_CI90.png"), width = 7, height = 7, units = "in", res = 600)
+
+dat_plot <- dat_result_exp[3:4,]
+dat_plot$variable <- c("Negative emotions\nwere not present", "Negative emotions\nwere present")
+
+plot("n", xlim = c(0,4), ylim = c(0.75,1.75), xlab = "", xaxt = "n", yaxt = "n", ylab = "Treatment Effect on the Risk Ratio Scale")
+axis(1, at = c(1,3), labels = dat_plot$variable)
+axis(2, at = seq(0.75,1.75,0.25))
+
+use_x0 <- 1
+use_y0 <- dat_plot$rrLB90[1]
+use_y1 <- dat_plot$rrUB90[1]
+points(use_x0, dat_plot$exp_estimates[1], col = "forestgreen", lwd = 30)
+arrows(x0 = use_x0, y0 = use_y0, x1 = use_x0, y1 = use_y1, code = 3, col = "forestgreen", lwd = 10, angle = 90)
+text(x = use_x0 + 0.5, y = dat_plot$exp_estimates[1], labels = round(dat_plot$exp_estimates[1], 3), col = "forestgreen", cex = 2)
+
+use_x0 <- 3
+use_y0 <- dat_plot$rrLB90[2]
+use_y1 <- dat_plot$rrUB90[2]
+points(use_x0, dat_plot$exp_estimates[2], col = "darkgoldenrod", lwd = 30)
+arrows(x0 = use_x0, y0 = use_y0, x1 = use_x0, y1 = use_y1, code = 3, col = "darkgoldenrod", lwd = 10, angle = 90)
+text(x = use_x0 + 0.5, y = dat_plot$exp_estimates[2], labels = round(dat_plot$exp_estimates[2], 3), col = "darkgoldenrod", cex = 2)
+
+abline(h = 1, lty = 3, col = "red", lwd = 2)
+
+dev.off()
 ```
 
 # Cigarette availability and negative affect self-reported in brief survey
@@ -1369,3 +1485,101 @@ dat_result_exp_output[,2:ncol(dat_result_exp_output)] <- format(round(dat_result
 
 dat_result_exp_output %>% write.csv(., file.path("analysis-complete-case", "formatted-output", "other-exploratory-moderators", "risk_ratio_scale_cig_available_and_negative_affect.csv"), row.names = TRUE)
 ```
+
+
+```{r}
+png(file = file.path("analysis-complete-case", "formatted-output", "other-exploratory-moderators", "risk_ratio_scale_cig_available_and_negative_affect_CI95.png"), width = 14, height = 7, units = "in", res = 600)
+
+dat_plot <- dat_result_exp[5:8,]
+dat_plot$variable <- c("Cigarettes were not available and\nNegative emotions were not present", 
+                       "Cigarettes were not available and\nNegative emotions were present",
+                       "Cigarettes were available and\nNegative emotions were not present", 
+                       "Cigarettes were available and\nNegative emotions were present")
+
+plot("n", xlim = c(0,8), ylim = c(0.75,1.75), xlab = "", xaxt = "n", yaxt = "n", ylab = "Treatment Effect on the Risk Ratio Scale")
+axis(1, at = c(1,3,5,7), labels = dat_plot$variable)
+axis(2, at = seq(0.75,1.75,0.25))
+
+use_x0 <- 1
+use_y0 <- dat_plot$rrLB95[1]
+use_y1 <- dat_plot$rrUB95[1]
+points(use_x0, dat_plot$exp_estimates[1], col = "goldenrod1", lwd = 30)
+arrows(x0 = use_x0, y0 = use_y0, x1 = use_x0, y1 = use_y1, code = 3, col = "goldenrod1", lwd = 10, angle = 90)
+text(x = use_x0 + 0.5, y = dat_plot$exp_estimates[1], labels = round(dat_plot$exp_estimates[1], 3), col = "goldenrod1", cex = 2)
+
+use_x0 <- 3
+use_y0 <- dat_plot$rrLB95[2]
+use_y1 <- dat_plot$rrUB95[2]
+points(use_x0, dat_plot$exp_estimates[2], col = "darkorange", lwd = 30)
+arrows(x0 = use_x0, y0 = use_y0, x1 = use_x0, y1 = use_y1, code = 3, col = "darkorange", lwd = 10, angle = 90)
+text(x = use_x0 + 0.5, y = dat_plot$exp_estimates[2], labels = round(dat_plot$exp_estimates[2], 3), col = "darkorange", cex = 2)
+
+use_x0 <- 5
+use_y0 <- dat_plot$rrLB95[3]
+use_y1 <- dat_plot$rrUB95[3]
+points(use_x0, dat_plot$exp_estimates[3], col = "tomato", lwd = 30)
+arrows(x0 = use_x0, y0 = use_y0, x1 = use_x0, y1 = use_y1, code = 3, col = "tomato", lwd = 10, angle = 90)
+text(x = use_x0 + 0.5, y = dat_plot$exp_estimates[3], labels = round(dat_plot$exp_estimates[3], 3), col = "tomato", cex = 2)
+
+use_x0 <- 7
+use_y0 <- dat_plot$rrLB95[4]
+use_y1 <- dat_plot$rrUB95[4]
+points(use_x0, dat_plot$exp_estimates[4], col = "brown", lwd = 30)
+arrows(x0 = use_x0, y0 = use_y0, x1 = use_x0, y1 = use_y1, code = 3, col = "brown", lwd = 10, angle = 90)
+text(x = use_x0 + 0.5, y = dat_plot$exp_estimates[4], labels = round(dat_plot$exp_estimates[4], 3), col = "brown", cex = 2)
+
+abline(h = 1, lty = 3, col = "red", lwd = 2)
+
+dev.off()
+```
+
+```{r}
+png(file = file.path("analysis-complete-case", "formatted-output", "other-exploratory-moderators", "risk_ratio_scale_cig_available_and_negative_affect_CI90.png"), width = 14, height = 7, units = "in", res = 600)
+
+dat_plot <- dat_result_exp[5:8,]
+dat_plot$variable <- c("Cigarettes were not available and\nNegative emotions were not present", 
+                       "Cigarettes were not available and\nNegative emotions were present",
+                       "Cigarettes were available and\nNegative emotions were not present", 
+                       "Cigarettes were available and\nNegative emotions were present")
+
+plot("n", xlim = c(0,8), ylim = c(0.75,1.75), xlab = "", xaxt = "n", yaxt = "n", ylab = "Treatment Effect on the Risk Ratio Scale")
+axis(1, at = c(1,3,5,7), labels = dat_plot$variable)
+axis(2, at = seq(0.75,1.75,0.25))
+
+use_x0 <- 1
+use_y0 <- dat_plot$rrLB90[1]
+use_y1 <- dat_plot$rrUB90[1]
+points(use_x0, dat_plot$exp_estimates[1], col = "goldenrod1", lwd = 30)
+arrows(x0 = use_x0, y0 = use_y0, x1 = use_x0, y1 = use_y1, code = 3, col = "goldenrod1", lwd = 10, angle = 90)
+text(x = use_x0 + 0.5, y = dat_plot$exp_estimates[1], labels = round(dat_plot$exp_estimates[1], 3), col = "goldenrod1", cex = 2)
+
+use_x0 <- 3
+use_y0 <- dat_plot$rrLB90[2]
+use_y1 <- dat_plot$rrUB90[2]
+points(use_x0, dat_plot$exp_estimates[2], col = "darkorange", lwd = 30)
+arrows(x0 = use_x0, y0 = use_y0, x1 = use_x0, y1 = use_y1, code = 3, col = "darkorange", lwd = 10, angle = 90)
+text(x = use_x0 + 0.5, y = dat_plot$exp_estimates[2], labels = round(dat_plot$exp_estimates[2], 3), col = "darkorange", cex = 2)
+
+use_x0 <- 5
+use_y0 <- dat_plot$rrLB90[3]
+use_y1 <- dat_plot$rrUB90[3]
+points(use_x0, dat_plot$exp_estimates[3], col = "tomato", lwd = 30)
+arrows(x0 = use_x0, y0 = use_y0, x1 = use_x0, y1 = use_y1, code = 3, col = "tomato", lwd = 10, angle = 90)
+text(x = use_x0 + 0.5, y = dat_plot$exp_estimates[3], labels = round(dat_plot$exp_estimates[3], 3), col = "tomato", cex = 2)
+
+use_x0 <- 7
+use_y0 <- dat_plot$rrLB90[4]
+use_y1 <- dat_plot$rrUB90[4]
+points(use_x0, dat_plot$exp_estimates[4], col = "brown", lwd = 30)
+arrows(x0 = use_x0, y0 = use_y0, x1 = use_x0, y1 = use_y1, code = 3, col = "brown", lwd = 10, angle = 90)
+text(x = use_x0 + 0.5, y = dat_plot$exp_estimates[4], labels = round(dat_plot$exp_estimates[4], 3), col = "brown", cex = 2)
+
+abline(h = 1, lty = 3, col = "red", lwd = 2)
+
+dev.off()
+```
+
+
+
+
+
